[package]
name = "ic-bn-logs-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
url = "2.5"
rustls = { version = "0.23", features = ["ring"] }
ic-agent = "0.41.0"
candid = "0.10.10"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.0", features = ["derive"] }
strip-ansi-escapes = "0.2"
